--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,9 @@ flexible messaging model and an intuitive client API.</description>
     <pulsar.broker.compiler.release>${maven.compiler.target}</pulsar.broker.compiler.release>
     <pulsar.client.compiler.release>8</pulsar.client.compiler.release>
 
+    <sonar.organization>arnatomasssonar.organization>
+    <sonar.host.url>https://sonarcloud.iosonar.host.url>
+        
     <pulsar.client.python.version>3.2.0</pulsar.client.python.version>
 
     <!--config keys to configure test selection -->
